# QLaibLibCpp

./: .gitignor  .gitignore  AGENTS.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Client.py  Doxyfile  EPC_Halfwave.py  LongDataLog.py  Makefile  OC.py  PlotterApp_Cpp.py  Print_Counts_and_Stats.py  QuTAG_MC.py  README.md  Server.py  SetOvenTemp.py  Stability_Check_and_Record.py  cmake_install.cmake  main.cpp  plotter_settings.json  pyproject.toml  qber_live_log.csv
EPC/: EPC.py  EPC_Start_Util.py  Grad_Descent_EPC.py  Grad_Descent_EPC_V2.py  Grad_Descent_EPC_V3.py  Grad_Descent_EPC_test.py  PC_control_application.py  Readme.txt  functions.py
QuTAGC/doc/: globals.html  globals_enum.html  tdcbase_8h.html
QuTAGC/inc/: tdcbase.h
QuTAGC/src/: example-qti.c
coincfinder/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp/: CMakeLists.txt  CMakePresets.json
cpp/QuTAGC/doc/: globals_eval.html  globals_func.html  tdcbase_8h_source.html
cpp/QuTAGC/src/: makefile
cpp/apps/: CMakeLists.txt  qlaib_gui.cpp  qlaib_record_qudag.cpp
cpp/include/qlaib/acquisition/: BinReplayBackend.h  IBackend.h  MockBackend.h  QuTAGBackend.h
cpp/include/qlaib/core/: EventBus.h
cpp/include/qlaib/data/: SampleBatch.h
cpp/include/qlaib/metrics/: IMetric.h  Registry.h
cpp/include/qlaib/ui/: MainWindow.h
cpp/smoke/: CMakeLists.txt  main.cpp
cpp/src/: CMakeLists.txt
cpp/src/acquisition/: BinReplayBackend.cpp  MockBackend.cpp  QuTAGBackend.cpp
cpp/src/metrics/: Registry.cpp
cpp/src/ui/: MainWindow.cpp
cpp/tests/: CMakeLists.txt  sample_tests.cpp
docs/: ARCHITECTURE.md  USAGE.md
docs/doxygen/html/: _a_r_c_h_i_t_e_c_t_u_r_e_8md.html  _bin_replay_backend_8cpp.html  _bin_replay_backend_8cpp__incl.map  _bin_replay_backend_8cpp__incl.md5  _bin_replay_backend_8h.html  _bin_replay_backend_8h.js  _bin_replay_backend_8h__dep__incl.map  _bin_replay_backend_8h__dep__incl.md5  _bin_replay_backend_8h__incl.map  _bin_replay_backend_8h__incl.md5  _bin_replay_backend_8h_source.html  _event_bus_8h.html  _event_bus_8h.js  _event_bus_8h__dep__incl.map  _event_bus_8h__dep__incl.md5  _event_bus_8h__incl.map  _event_bus_8h__incl.md5  _event_bus_8h_source.html  _i_backend_8h.html  _i_backend_8h.js  _i_backend_8h__dep__incl.map  _i_backend_8h__dep__incl.md5  _i_backend_8h__incl.map  _i_backend_8h__incl.md5  _i_backend_8h_source.html  _i_metric_8h.html  _i_metric_8h.js  _i_metric_8h__dep__incl.map  _i_metric_8h__dep__incl.md5  _i_metric_8h__incl.map  _i_metric_8h__incl.md5  _i_metric_8h_source.html  _main_window_8cpp.html  _main_window_8cpp.js  _main_window_8cpp__incl.map  _main_window_8cpp__incl.md5  _main_window_8h.html  _main_window_8h.js  _main_window_8h__dep__incl.map  _main_window_8h__dep__incl.md5  (+213 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+29 more)
docs/doxygen/latex/: _a_r_c_h_i_t_e_c_t_u_r_e_8md.tex  _bin_replay_backend_8cpp.tex  _bin_replay_backend_8cpp__incl.md5  _bin_replay_backend_8h.tex  _bin_replay_backend_8h__dep__incl.md5  _bin_replay_backend_8h__incl.md5  _bin_replay_backend_8h_source.tex  _event_bus_8h.tex  _event_bus_8h__dep__incl.md5  _event_bus_8h__incl.md5  _event_bus_8h_source.tex  _i_backend_8h.tex  _i_backend_8h__dep__incl.md5  _i_backend_8h__incl.md5  _i_backend_8h_source.tex  _i_metric_8h.tex  _i_metric_8h__dep__incl.md5  _i_metric_8h__incl.md5  _i_metric_8h_source.tex  _main_window_8cpp.tex  _main_window_8cpp__incl.md5  _main_window_8h.tex  _main_window_8h__dep__incl.md5  _main_window_8h__incl.md5  _main_window_8h_source.tex  _mock_backend_8cpp.tex  _mock_backend_8cpp__incl.md5  _mock_backend_8h.tex  _mock_backend_8h__dep__incl.md5  _mock_backend_8h__incl.md5  _mock_backend_8h_source.tex  _qu_t_a_g_backend_8cpp.tex  _qu_t_a_g_backend_8cpp__incl.md5  _qu_t_a_g_backend_8h.tex  _qu_t_a_g_backend_8h__dep__incl.md5  _qu_t_a_g_backend_8h__incl.md5  _qu_t_a_g_backend_8h_source.tex  _registry_8cpp.tex  _registry_8cpp__incl.md5  _registry_8h.tex  (+64 more)
docs/doxygen/latex/aux/: refman.aux  refman.fdb_latexmk  refman.fls  refman.idx  refman.ilg  refman.ind  refman.out  refman.toc
examples/: bin_custom_specs.py  bin_default_timeseries.py  bin_timeseries_only.py  live_qutag.py  mock_quickstart.py  process_bin_file.py
qlaiblib/: __init__.py  cli.py
qlaiblib/acquisition/: base.py  file_replay.py  mock.py  qutag.py
qlaiblib/coincidence/: delays.py  pipeline.py  specs.py
qlaiblib/data/: models.py
qlaiblib/io/: coincfinder_backend.py
qlaiblib/live/: controller.py  history.py  tk_dashboard.py
qlaiblib/metrics/: __init__.py  chsh.py  core.py  qber.py  visibility.py
qlaiblib/plotting/: __init__.py  static.py  timeseries.py
qlaiblib/utils/: settings.py  timing.py
scripts/: linux-cmake.sh  win-cmake.bat
