[build-system]
requires = [
  "scikit-build-core>=0.6.0",
  "pybind11>=2.12",
  "numpy>=1.24",
  "cmake>=3.18",
  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "qlaiblib"
version = "0.1.0"
description = "Toolkit for singles counting, coincidences, metrics, and live plotting for QuTAG/coincfinder setups."
readme = "README.md"
authors = [
  {name = "Adrian Udovičić", email = "adrian.udovicic@fmf.uni-lj.si"},
  {name = "Codex Assistant"}
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "typer>=0.12",
  "uncertainties>=3.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=7.0",
]

[project.scripts]
qlaib = "qlaiblib.cli:main"

[tool.scikit-build]
wheel.packages = ["qlaiblib"]
cmake.build-type = "Release"
